Bug 486182 - Artifact window in overview which crashes KWin on click
Summary: Artifact window in overview which crashes KWin on click
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-overview (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-27 00:40 UTC by Natalie Clarius
Modified: 2024-05-29 11:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Overview with artifact (1.33 MB, image/jpeg)
2024-04-27 00:40 UTC, Natalie Clarius
Details
Backtrace of the crash after cliking the fake window (65.80 KB, text/plain)
2024-04-27 00:41 UTC, Natalie Clarius
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Natalie Clarius 2024-04-27 00:40:55 UTC
Created attachment 168935 [details]
Overview with artifact

SUMMARY
Whenever I open overview, I get among the windows a small accent colored rectangle (see screenshot), which on click crashes KWin (see backtrace).

SOFTWARE/OS VERSIONS
git master
X11
Comment 1 Natalie Clarius 2024-04-27 00:41:29 UTC
Created attachment 168936 [details]
Backtrace of the crash after cliking the fake window
Comment 2 Vlad Zahorodnii 2024-05-29 09:43:32 UTC
likely to be fixed by https://invent.kde.org/plasma/kwin/-/merge_requests/5776
Comment 3 Vlad Zahorodnii 2024-05-29 10:45:18 UTC
Git commit ce57af62ec27f6e4cfa46176e7b62f93c5b99cd8 by Vlad Zahorodnii, on behalf of Łukasz Patron.
Committed on 29/05/2024 at 10:45.
Pushed by vladz into branch 'master'.

scripting: Filter out windows with isClient=false in WindowModel

These windows render as empty boxes and opening them crashes the KWin.
Also, the same check is present in TabBox.

M  +1    -1    src/scripting/windowmodel.cpp

https://invent.kde.org/plasma/kwin/-/commit/ce57af62ec27f6e4cfa46176e7b62f93c5b99cd8
Comment 4 Vlad Zahorodnii 2024-05-29 11:00:04 UTC
Git commit c4eb7f3418a810ba2da2d61d6a485a002e53738d by Vlad Zahorodnii, on behalf of Łukasz Patron.
Committed on 29/05/2024 at 10:51.
Pushed by vladz into branch 'Plasma/6.1'.

scripting: Filter out windows with isClient=false in WindowModel

These windows render as empty boxes and opening them crashes the KWin.
Also, the same check is present in TabBox.


(cherry picked from commit ce57af62ec27f6e4cfa46176e7b62f93c5b99cd8)

26d347e2 scripting: Filter out windows with isClient=false in WindowModel

M  +1    -1    src/scripting/windowmodel.cpp

https://invent.kde.org/plasma/kwin/-/commit/c4eb7f3418a810ba2da2d61d6a485a002e53738d