scripting: Filter out windows with isClient=false in WindowModel

These windows render as empty boxes and opening them crashes the KWin.
Also, the same check is present in TabBox.

BUG: 486182